--- a/project-addons/theme_canilike/static/css/modules/header.less
+++ b/project-addons/theme_canilike/static/css/modules/header.less
@@ -240,3 +240,15 @@ header a.navbar-brand.logo {
         }
     }
 }
+
+ /* Without igape logo in footer but it is in header */
+.header-igape {
+    flex-grow: 1;
+    text-align: right;
+    img {
+        width: 105px;
+    }
+        span {
+            display: block;
+        }
+}
